[gd_scene load_steps=4 format=3 uid="uid://bkc7evi13eujd"]

[ext_resource type="Script" path="res://scenes/projectiles/laser.gd" id="1_ewo7s"]
[ext_resource type="Texture2D" uid="uid://bro8bos8tol5x" path="res://graphics/projectiles/blue.png" id="1_ip8fw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0aj7u"]
radius = 6.0
height = 162.0

[node name="Laser" type="Area2D"]
collision_layer = 8
collision_mask = 31
script = ExtResource("1_ewo7s")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ip8fw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_0aj7u")

[node name="SelfDestruct" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestruct" to="." method="_on_self_destruct_timeout"]
